--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Fondamento&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Londrina+Outline&display=swap"
       rel="stylesheet"
     />
     <title>React App</title>
