completed basic home page design

--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,16 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Londrina+Outline&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Londrina+Solid&family=Titillium+Web:wght@600&family=Varela+Round&display=swap"
       rel="stylesheet"
     />
-    <title>Axiom | For True Learning</title>
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.14.0/css/all.css"
+      integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc"
+      crossorigin="anonymous"
+    />
+    <title>Axiom | True Learning</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
