--- a/client/public/index.html
+++ b/client/public/index.html
@@ -27,7 +27,7 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
-    <title>Axiom | True Learning</title>
+    <title>Axiom | Art in true form</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
